tests/single_instruction_translation_validation/mcsema/register-variants-samereg/vpcmpgtb_xmm_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:299:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %15) #22
            ^
0.02user 0.03system 0:00.21elapsed 29%CPU (0avgtext+0avgdata 27468maxresident)k
0inputs+16outputs (0major+3280minor)pagefaults 0swaps
